k8s/dev/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sample-app-dev

spec:
  selector:
    app: sample-app-dev

  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31011

  type: NodePort
