k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sample-app-dev
  namespace: dev

spec:
  ingressClassName: traefik

  tls:
    - hosts:
      - dev.sample-app.local
      secretName: sample-app-tls  

  rules:
  - host: dev.sample-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app-dev
            port:
              number: 3000
